voting-app/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-v1
  labels:
    app: worker
    version: v1
spec:
  selector:
    matchLabels:
      app: worker
      version: v1
  template:
    metadata:
      labels:
        app: worker
        version: v1
    spec:
      containers:
      - image: dockersamples/examplevotingapp_worker
        name: worker
        imagePullPolicy: IfNotPresent
