voting-app/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-v1
  labels:
    app: db
    version: v1
spec:
  selector:
    matchLabels:
      app: db
      version: v1
  template:
    metadata:
      labels:
        app: db
        version: v1
    spec:
      containers:
      - image: postgres:9.4
        name: db
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  ports:
  - name: tcp-postgres
    port: 5432
  selector:
    app: db
  type: LoadBalancer
