voting-app/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-v1
  labels:
    app: redis
    version: v1
spec:
  selector:
    matchLabels:
      app: redis
      version: v1
  template:
    metadata:
      labels:
        app: redis
        version: v1
    spec:
      containers:
      - image: redis:alpine
        name: redis
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - name: redis
    port: 6379
  selector:
    app: redis
  type: LoadBalancer
