voting-app/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-v1
  labels:
    app: result
    version: v1
spec:
  selector:
    matchLabels:
      app: result
      version: v1
  template:
    metadata:
      labels:
        app: result
        version: v1
    spec:
      containers:
      - image: dockersamples/examplevotingapp_result:before
        name: result
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  ports:
  - name: http-result
    port: 80
  selector:
    app: result
  type: LoadBalancer
