voting-app/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-v1
  labels:
    app: vote
    version: v1
spec:
  selector:
    matchLabels:
      app: vote
      version: v1
  template:
    metadata:
      labels:
        app: vote
        version: v1
    spec:
      containers:
      - image: cmendes/vote:latest
        name: vote
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  ports:
  - name: http-vote
    port: 8081
  selector:
    app: vote
  type: LoadBalancer
